# okayeg

./: Cargo.toml
crates/eg/: Cargo.toml
crates/eg/src/: bridge.rs  config.rs  filetree.rs  ignore.rs  keys.rs  main.rs  mount.rs  net.rs  trust.rs  watch.rs  workspace.rs
crates/eg/tests/: cli.rs
crates/okayeg/: Cargo.toml
crates/okayeg-net/: Cargo.toml
crates/okayeg-net/src/: authz.rs  lib.rs  node.rs
crates/okayeg-net/tests/: dial_timeout.rs
crates/okayeg-wasm/: Cargo.toml  jsr.json  wasm_url.d.ts  wasm_url.js
crates/okayeg-wasm/src/: comments.rs  identity.rs  lib.rs  wire.rs
crates/okayeg/src/: comment.rs  doc.rs  fs.rs  lib.rs  presence.rs  sync.rs  tree.rs
crates/okayeg/src/presence/: wire.rs
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/concepts/: access-control.md  collaboration.md  event-graph.md  identity.md  materialization.md  remotes.md  sync.md  system-overview.md  transports.md
docs/src/design/: editor-integration.md  materialization.md  repo-layout.md
