[workspace]
resolver = "3"
members = ["crates/okayeg", "crates/okayeg-net", "crates/eg", "crates/okayeg-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
loro = "1.13.6"
postcard = { version = "1", features = ["alloc"] }
serde = "1"
okayeg = { path = "crates/okayeg" }
okayeg-net = { path = "crates/okayeg-net" }
