[package]
name = "eg"
description = "Command-line interface for okayeg."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "eg"
path = "src/main.rs"

[dependencies]
okayeg.workspace = true
cap-std = "4"
notify = "8"
notify-debouncer-full = "0.7"

[dev-dependencies]
tempfile = "3"
