[package]
name = "eg"
description = "Command-line interface for okayeg."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "eg"
path = "src/main.rs"

[dependencies]
okayeg.workspace = true
okayeg-net.workspace = true
clap = { version = "4", features = ["derive"] }
cap-std = "4"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[dev-dependencies]
tempfile = "3"
