[package]
name = "okayeg-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native"]
# The native transport: the iroh `Node` endpoint and the subprocess authorizer.
# Disabled for wasm builds, which bring their own browser transport and reuse only
# the (transport-generic) protocol loop, `Authorizer` trait, and `Perms`.
native = ["dep:iroh", "tokio/rt", "tokio/process", "tokio/time"]
testing = []

[dependencies]
okayeg.workspace = true
iroh = { version = "1", optional = true }
tokio = { version = "1", features = ["io-util", "macros", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
